cocoa: change anchor point for views extension bubbles

The proper anchor point is bottom-center, not bottom-right.

Bug: 757646
Change-Id: Icdad7cddd35419898aa1cf7b5b75962dd9ba45c4